force-app/main/default/objects/Dataset2__c/Dataset2__c.object-meta.xml
<CustomObject>
    <label>Dataset2</label>
    <nameField>
        <displayFormat>DA-{000}</displayFormat>
        <label>Dataset1 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dataset2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>