force-app/main/default/objects/Dataset2__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dataset2</relationshipLabel>
    <relationshipName>Dataset2</relationshipName>
    <type>Lookup</type>
</CustomField>