force-app/main/default/objects/Dataset2__c/fields/Dataset1__c.field-meta.xml
<CustomField>
    <fullName>Dataset1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dataset1</label>
    <referenceTo>Dataset1__c</referenceTo>
    <relationshipLabel>Dataset2</relationshipLabel>
    <relationshipName>Dataset2</relationshipName>
    <type>Lookup</type>
</CustomField>