force-app/main/default/objects/Dataset2__c/fields/Plan_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Plan_Hierarchy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan Hierarchy</label>
    <referenceTo>Plan_Hierarchy__c</referenceTo>
    <relationshipLabel>Dataset2 (Plan Hierarchy)</relationshipLabel>
    <relationshipName>Dataset2_PlanHierarchy</relationshipName>
    <type>Lookup</type>
</CustomField>