force-app/main/default/objects/Dataset2__c/fields/Plan_SubHierarchy__c.field-meta.xml
<CustomField>
    <fullName>Plan_SubHierarchy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan SubHierarchy</label>
    <referenceTo>Plan_SubHierarchy__c</referenceTo>
    <relationshipLabel>Dataset2 (Plan SubHierarchy)</relationshipLabel>
    <relationshipName>Dataset2_PlanSubHierarchy</relationshipName>
    <type>Lookup</type>
</CustomField>