force-app/main/default/objects/Dataset2__c/fields/Template_Problem__c.field-meta.xml
<CustomField>
    <fullName>Template_Problem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template Problem</label>
    <referenceTo>Template_Problem__c</referenceTo>
    <relationshipLabel>Dataset2 (Template Problem)</relationshipLabel>
    <relationshipName>Dataset2_Template_Problem</relationshipName>
    <type>Lookup</type>
</CustomField>