force-app/main/default/objects/Dataset2__c/fields/Treatment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Treatment Plan</label>
    <referenceTo>Treatment_Plan__c</referenceTo>
    <relationshipLabel>Dataset2_TP</relationshipLabel>
    <relationshipName>Dataset2_TP</relationshipName>
    <type>Lookup</type>
</CustomField>