force-app/main/default/objects/Dataset2__c/recordTypes/EHR_Form_Default_Layout.recordType-meta.xml
<RecordType>
    <fullName>EHR_Form_Default_Layout</fullName>
    <active>true</active>
    <label>Default Layout</label>
</RecordType>