force-app/main/default/objects/Dataset2__c/recordTypes/Treatment_Plan_Recordtype1.recordType-meta.xml
<RecordType>
    <fullName>Treatment_Plan_Recordtype1</fullName>
    <active>true</active>
    <label>Treatment Plan Recordtype1</label>
</RecordType>