force-app/main/default/objects/Dataset2__c/recordTypes/Treatment_Plan_Recordtype2.recordType-meta.xml
<RecordType>
    <fullName>Treatment_Plan_Recordtype2</fullName>
    <active>true</active>
    <label>Treatment Plan Recordtype2</label>
</RecordType>